Angular/frontend/src/app/pages/TV/tv-message/tv-message.component.scss
.main-container{
    width: 100%;
    height: auto;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    font-family: (Roboto);
}

.sender-container{
    display: flex;
    justify-content: flex-start;
    align-items: baseline;
    padding-bottom: 2%;
}

.main-container-right{
    width: 100%;
    height: auto;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
    font-family: (Roboto);
}
.sender-container-right{
    display: flex;
    justify-content: flex-end;
    align-items: baseline;
    padding-bottom: 2%;
}

.sender-profile{
    // width: 4vw;
    width: 3.5em;
}

.sender-name{
    margin: 0px;
    padding-left: 2%;

    // font-size: 2vw;
    font-size: 1.8em;
    white-space: nowrap;
    font-weight: bold;
}

.message-container{
    position: relative;

    // width: 27vw;
    width: 100%;

    border-radius: 5%;
    border-style: solid;
    border-color: rgb(236, 236, 236);
    background-color: rgb(236, 236, 236);
    border-width: thin;
}

.message-text{
    position: relative;
    margin: 0px;
    padding: 0.5em;
    padding-bottom: 1.5em;

    // font-size: 1.8vw;
    font-size: 1.8em;
    font-weight: 400;
    // line-height: 3vw;
    line-height: 1.5em;
}

.message-time{
    font-size: 1em;
    // font-size: 1.4vw;1

    position: absolute;
    // left: 23vw;
    right: 5%;    
    bottom: 0%;
    margin: 0px;
}

